# v0-nft-generator-script

./: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  quick-test.sh  run-production.sh  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/advanced/: page.tsx
app/analytics/: page.tsx
app/api/github/create-repo/: route.ts
app/api/github/deploy-vercel/: route.ts
app/api/mint/initiate/: route.ts
app/api/mint/payment-status/[transactionId]/: route.ts
app/api/mint/status/: route.ts
app/api/nft/[tokenId]/image/: route.ts
app/api/optimize-sizes/: route.ts
app/gallery/: page.tsx
app/mint/: page.tsx
app/utility/: page.tsx
app/verify/: page.tsx
components/: advanced-generator.tsx  airdrop-widget.tsx  analytics-dashboard.tsx  community-gallery.tsx  era-selector.tsx  fractal-canvas.tsx  github-deployment.tsx  holder-verification.tsx  mint-interface.tsx  minting-suite.tsx  nft-generator.tsx  organism-gallery.tsx  organism-preview.tsx  size-optimizer.tsx  utility-staking.tsx
lib/: doge-minting.ts  geologic-eras.ts  github-deployment.ts  image-optimizer.ts  nft-metadata.ts
scripts/: batch-dogelection-generator.py  duplicate-checker.ts  fractal-generator.ts  generate-3d-models.py  generate-4444-organisms.py  generate-advanced-fractals.py  generate-fractal.py  generate-nft-collection.ts  generate-optimized-organisms.py  metadata-generator.ts  run-generator.ts  run-optimization.py  test-generator.ts  validate-uniqueness.py
src/: fractal.rs  generator.rs  main.rs  metadata.rs  optimizer.rs
(+1 files in other folders)
