[package]
name = "fractal-nft-generator"
version = "1.0.0"
edition = "2021"
authors = ["NFT Generator <nft@example.com>"]
description = "High-performance fractal NFT generator for 4444 unique collectibles"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
image = "0.24"
imageproc = "0.23"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
